syntax = "proto3";

// ProtoBuffer description file for configuration settings of the GDSC SMLM Java code.
// Authors: Alex Herbert, 2017 
// License: GPL V3
package gdsc.smlm.data.config;

option java_outer_classname = "CalibrationConfig";

import "unit.proto";

// Define the calibration for distance
message DistanceCalibration {
	// The distance unit.
	DistanceUnit distanceUnit = 1;
	// The camera pixel size in nanometers.
	double nmPerPixel = 2;
}

// Define the calibration for time
message TimeCalibration {
	// The time unit. This is currently unused as it is assumed the time in the results 
	// is in frames.
	TimeUnit timeUnit = 1;
	// The exposure time in milliseconds per frame.
	double exposureTime = 2;
}

message IntensityCalibration {
	// The intensity unit.
	IntensityUnit intensityUnit = 1;
	// The gain (Count/photon). Can be used to convert the signal in Analogue-to-Digital
	// count units (Counts) to photons.
	double gain = 2;
}	

// The camera type
enum CameraType {
	CAMERA_TYPE_NA = 0; // Not available
	EMCCD = 1; // Electron Multiplying Charge Coupled Device (EM CCD)
	CCD = 2; // Charge Coupled Device (CCD)
	SCMOS = 3; // Scientific Complementary Metal-Oxide-Semiconductor (sCMOS)
}

// Define the camera calibration
message CameraCalibration {
	// The camera type.
	CameraType cameraType = 1;
	
	// The camera Gaussian read noise (in Counts).
	double readNoise = 2;

	// The camera bias (in Counts) 
	double bias = 3;

	// The camera amplification (Count/electron) used when modelling a microscope camera.
	// Note that the camera noise model assumes that electrons are converted to ADUs by 
	// amplification that is not perfect (i.e. it has noise). The amplification is equal 
	// to the gain (Count/photon) divided by the quantum efficiency (electron/photon).
	double amplification = 4;
}

// Define additional calibration required for the Point Spread Function (PSF) parameters
message PSFCalibration {
	// The angle units, e.g. for a rotated point spread function
	AngleUnit angleUnit = 1;
}

// Define the calibration for the results. The calibration contains details of the 
// results units and how to convert them. Note that data can be loaded without knowledge
// of the camera used so the distance, time and intensity calibration are separate.
message Calibration
{
	// The distance calibration.
	DistanceCalibration distanceCalibration = 1;

	// The time calibration.
	TimeCalibration timeCalibration = 2;
	
	// The intensity calibration
	IntensityCalibration intensityCalibration = 3;
	
	// The camera calibration.
	CameraCalibration cameraCalibration = 4;
	
	// The PSF calibration.
	PSFCalibration psfCalibration = 5;
}
